prepare_sim/cell_export_parser/gen/CellsParser.py
# Generated from /home/thilo/git/Reliability-analysis/prepare_sim/cell_export_parser/Cells.g4 by ANTLR 4.7
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class CellsParser ( Parser ):

    grammarFileName = "Cells.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'Connections for cell ''", "'':'", "'Reference:'", 
                     "'Library:'", "'Area:'", "'dont_touch:'", "'Input Pins'", 
                     "'Net'", "'Net Driver Pins'", "'Driver Pin Type'", 
                     "'Output Pins'", "'Net Load Pins'", "'Load Pin Type'", 
                     "'Input Pin'", "'('", "')'", "'Input Port'", "'Output Pin'", 
                     "'Output Port'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "Dashes", "Num", "AlphaNum", "Identifier", "COMMENT", 
                      "INFORMATIONLINE", "WS", "NEWLINE" ]

    RULE_r = 0
    RULE_cell = 1
    RULE_header = 2
    RULE_nameline = 3
    RULE_ref = 4
    RULE_lib = 5
    RULE_area = 6
    RULE_touch = 7
    RULE_inputs = 8
    RULE_outputs = 9
    RULE_ioline = 10
    RULE_pinname = 11
    RULE_netname = 12
    RULE_pins = 13
    RULE_pin = 14
    RULE_newline = 15
    RULE_pintype = 16
    RULE_inputpin = 17
    RULE_outputpin = 18

    ruleNames =  [ "r", "cell", "header", "nameline", "ref", "lib", "area", 
                   "touch", "inputs", "outputs", "ioline", "pinname", "netname", 
                   "pins", "pin", "newline", "pintype", "inputpin", "outputpin" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    Dashes=20
    Num=21
    AlphaNum=22
    Identifier=23
    COMMENT=24
    INFORMATIONLINE=25
    WS=26
    NEWLINE=27

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class RContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(CellsParser.EOF, 0)

        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(CellsParser.NEWLINE)
            else:
                return self.getToken(CellsParser.NEWLINE, i)

        def cell(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CellsParser.CellContext)
            else:
                return self.getTypedRuleContext(CellsParser.CellContext,i)


        def getRuleIndex(self):
            return CellsParser.RULE_r

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterR" ):
                listener.enterR(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitR" ):
                listener.exitR(self)




    def r(self):

        localctx = CellsParser.RContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_r)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 41
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,0,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 38
                    self.match(CellsParser.NEWLINE) 
                self.state = 43
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,0,self._ctx)

            self.state = 45 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 44
                    self.cell()

                else:
                    raise NoViableAltException(self)
                self.state = 47 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,1,self._ctx)

            self.state = 52
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==CellsParser.NEWLINE:
                self.state = 49
                self.match(CellsParser.NEWLINE)
                self.state = 54
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 55
            self.match(CellsParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class CellContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def header(self):
            return self.getTypedRuleContext(CellsParser.HeaderContext,0)


        def inputs(self):
            return self.getTypedRuleContext(CellsParser.InputsContext,0)


        def outputs(self):
            return self.getTypedRuleContext(CellsParser.OutputsContext,0)


        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(CellsParser.NEWLINE)
            else:
                return self.getToken(CellsParser.NEWLINE, i)

        def getRuleIndex(self):
            return CellsParser.RULE_cell

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCell" ):
                listener.enterCell(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCell" ):
                listener.exitCell(self)




    def cell(self):

        localctx = CellsParser.CellContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_cell)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 60
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==CellsParser.NEWLINE:
                self.state = 57
                self.match(CellsParser.NEWLINE)
                self.state = 62
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 63
            self.header()
            self.state = 67
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==CellsParser.NEWLINE:
                self.state = 64
                self.match(CellsParser.NEWLINE)
                self.state = 69
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 70
            self.inputs()
            self.state = 74
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==CellsParser.NEWLINE:
                self.state = 71
                self.match(CellsParser.NEWLINE)
                self.state = 76
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 77
            self.outputs()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class HeaderContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def nameline(self):
            return self.getTypedRuleContext(CellsParser.NamelineContext,0)


        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(CellsParser.NEWLINE)
            else:
                return self.getToken(CellsParser.NEWLINE, i)

        def ref(self):
            return self.getTypedRuleContext(CellsParser.RefContext,0)


        def lib(self):
            return self.getTypedRuleContext(CellsParser.LibContext,0)


        def area(self):
            return self.getTypedRuleContext(CellsParser.AreaContext,0)


        def touch(self):
            return self.getTypedRuleContext(CellsParser.TouchContext,0)


        def getRuleIndex(self):
            return CellsParser.RULE_header

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterHeader" ):
                listener.enterHeader(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitHeader" ):
                listener.exitHeader(self)




    def header(self):

        localctx = CellsParser.HeaderContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_header)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 79
            self.nameline()
            self.state = 80
            self.match(CellsParser.NEWLINE)
            self.state = 81
            self.ref()
            self.state = 82
            self.match(CellsParser.NEWLINE)
            self.state = 83
            self.lib()
            self.state = 84
            self.match(CellsParser.NEWLINE)
            self.state = 88
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==CellsParser.T__4:
                self.state = 85
                self.area()
                self.state = 86
                self.match(CellsParser.NEWLINE)


            self.state = 93
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==CellsParser.T__5:
                self.state = 90
                self.touch()
                self.state = 91
                self.match(CellsParser.NEWLINE)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class NamelineContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Identifier(self):
            return self.getToken(CellsParser.Identifier, 0)

        def AlphaNum(self):
            return self.getToken(CellsParser.AlphaNum, 0)

        def getRuleIndex(self):
            return CellsParser.RULE_nameline

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNameline" ):
                listener.enterNameline(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNameline" ):
                listener.exitNameline(self)




    def nameline(self):

        localctx = CellsParser.NamelineContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_nameline)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 95
            self.match(CellsParser.T__0)
            self.state = 96
            _la = self._input.LA(1)
            if not(_la==CellsParser.AlphaNum or _la==CellsParser.Identifier):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 97
            self.match(CellsParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class RefContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def AlphaNum(self):
            return self.getToken(CellsParser.AlphaNum, 0)

        def getRuleIndex(self):
            return CellsParser.RULE_ref

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRef" ):
                listener.enterRef(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRef" ):
                listener.exitRef(self)




    def ref(self):

        localctx = CellsParser.RefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_ref)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 99
            self.match(CellsParser.T__2)
            self.state = 100
            self.match(CellsParser.AlphaNum)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class LibContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Identifier(self):
            return self.getToken(CellsParser.Identifier, 0)

        def getRuleIndex(self):
            return CellsParser.RULE_lib

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLib" ):
                listener.enterLib(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLib" ):
                listener.exitLib(self)




    def lib(self):

        localctx = CellsParser.LibContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_lib)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 102
            self.match(CellsParser.T__3)
            self.state = 103
            self.match(CellsParser.Identifier)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class AreaContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Num(self):
            return self.getToken(CellsParser.Num, 0)

        def getRuleIndex(self):
            return CellsParser.RULE_area

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArea" ):
                listener.enterArea(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArea" ):
                listener.exitArea(self)




    def area(self):

        localctx = CellsParser.AreaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_area)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 105
            self.match(CellsParser.T__4)
            self.state = 106
            self.match(CellsParser.Num)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class TouchContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def AlphaNum(self):
            return self.getToken(CellsParser.AlphaNum, 0)

        def getRuleIndex(self):
            return CellsParser.RULE_touch

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTouch" ):
                listener.enterTouch(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTouch" ):
                listener.exitTouch(self)




    def touch(self):

        localctx = CellsParser.TouchContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_touch)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 108
            self.match(CellsParser.T__5)
            self.state = 109
            self.match(CellsParser.AlphaNum)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class InputsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(CellsParser.NEWLINE)
            else:
                return self.getToken(CellsParser.NEWLINE, i)

        def Dashes(self):
            return self.getToken(CellsParser.Dashes, 0)

        def ioline(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CellsParser.IolineContext)
            else:
                return self.getTypedRuleContext(CellsParser.IolineContext,i)


        def getRuleIndex(self):
            return CellsParser.RULE_inputs

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInputs" ):
                listener.enterInputs(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInputs" ):
                listener.exitInputs(self)




    def inputs(self):

        localctx = CellsParser.InputsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_inputs)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 111
            self.match(CellsParser.T__6)
            self.state = 112
            self.match(CellsParser.T__7)
            self.state = 115
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==CellsParser.T__8:
                self.state = 113
                self.match(CellsParser.T__8)
                self.state = 114
                self.match(CellsParser.T__9)


            self.state = 117
            self.match(CellsParser.NEWLINE)
            self.state = 118
            self.match(CellsParser.Dashes)
            self.state = 119
            self.match(CellsParser.NEWLINE)
            self.state = 121 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 120
                self.ioline()
                self.state = 123 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==CellsParser.AlphaNum):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class OutputsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(CellsParser.NEWLINE)
            else:
                return self.getToken(CellsParser.NEWLINE, i)

        def Dashes(self):
            return self.getToken(CellsParser.Dashes, 0)

        def ioline(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CellsParser.IolineContext)
            else:
                return self.getTypedRuleContext(CellsParser.IolineContext,i)


        def getRuleIndex(self):
            return CellsParser.RULE_outputs

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOutputs" ):
                listener.enterOutputs(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOutputs" ):
                listener.exitOutputs(self)




    def outputs(self):

        localctx = CellsParser.OutputsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_outputs)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 125
            self.match(CellsParser.T__10)
            self.state = 126
            self.match(CellsParser.T__7)
            self.state = 129
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==CellsParser.T__11:
                self.state = 127
                self.match(CellsParser.T__11)
                self.state = 128
                self.match(CellsParser.T__12)


            self.state = 131
            self.match(CellsParser.NEWLINE)
            self.state = 132
            self.match(CellsParser.Dashes)
            self.state = 133
            self.match(CellsParser.NEWLINE)
            self.state = 135 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 134
                self.ioline()
                self.state = 137 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==CellsParser.AlphaNum):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class IolineContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def pinname(self):
            return self.getTypedRuleContext(CellsParser.PinnameContext,0)


        def NEWLINE(self):
            return self.getToken(CellsParser.NEWLINE, 0)

        def netname(self):
            return self.getTypedRuleContext(CellsParser.NetnameContext,0)


        def pins(self):
            return self.getTypedRuleContext(CellsParser.PinsContext,0)


        def getRuleIndex(self):
            return CellsParser.RULE_ioline

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIoline" ):
                listener.enterIoline(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIoline" ):
                listener.exitIoline(self)




    def ioline(self):

        localctx = CellsParser.IolineContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_ioline)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 139
            self.pinname()
            self.state = 143
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==CellsParser.AlphaNum or _la==CellsParser.Identifier:
                self.state = 140
                self.netname()
                self.state = 141
                self.pins()


            self.state = 145
            self.match(CellsParser.NEWLINE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class PinnameContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def AlphaNum(self):
            return self.getToken(CellsParser.AlphaNum, 0)

        def getRuleIndex(self):
            return CellsParser.RULE_pinname

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPinname" ):
                listener.enterPinname(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPinname" ):
                listener.exitPinname(self)




    def pinname(self):

        localctx = CellsParser.PinnameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_pinname)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 147
            self.match(CellsParser.AlphaNum)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class NetnameContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Identifier(self):
            return self.getToken(CellsParser.Identifier, 0)

        def AlphaNum(self):
            return self.getToken(CellsParser.AlphaNum, 0)

        def getRuleIndex(self):
            return CellsParser.RULE_netname

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNetname" ):
                listener.enterNetname(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNetname" ):
                listener.exitNetname(self)




    def netname(self):

        localctx = CellsParser.NetnameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_netname)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 149
            _la = self._input.LA(1)
            if not(_la==CellsParser.AlphaNum or _la==CellsParser.Identifier):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class PinsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def pin(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CellsParser.PinContext)
            else:
                return self.getTypedRuleContext(CellsParser.PinContext,i)


        def getRuleIndex(self):
            return CellsParser.RULE_pins

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPins" ):
                listener.enterPins(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPins" ):
                listener.exitPins(self)




    def pins(self):

        localctx = CellsParser.PinsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_pins)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 152 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 151
                    self.pin()

                else:
                    raise NoViableAltException(self)
                self.state = 154 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,13,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class PinContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def newline(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CellsParser.NewlineContext)
            else:
                return self.getTypedRuleContext(CellsParser.NewlineContext,i)


        def pintype(self):
            return self.getTypedRuleContext(CellsParser.PintypeContext,0)


        def Identifier(self):
            return self.getToken(CellsParser.Identifier, 0)

        def AlphaNum(self):
            return self.getToken(CellsParser.AlphaNum, 0)

        def getRuleIndex(self):
            return CellsParser.RULE_pin

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPin" ):
                listener.enterPin(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPin" ):
                listener.exitPin(self)




    def pin(self):

        localctx = CellsParser.PinContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_pin)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 156
            self.newline()
            self.state = 157
            _la = self._input.LA(1)
            if not(_la==CellsParser.AlphaNum or _la==CellsParser.Identifier):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 158
            self.newline()
            self.state = 159
            self.pintype()
            self.state = 160
            self.newline()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class NewlineContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NEWLINE(self):
            return self.getToken(CellsParser.NEWLINE, 0)

        def getRuleIndex(self):
            return CellsParser.RULE_newline

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNewline" ):
                listener.enterNewline(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNewline" ):
                listener.exitNewline(self)




    def newline(self):

        localctx = CellsParser.NewlineContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_newline)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 163
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,14,self._ctx)
            if la_ == 1:
                self.state = 162
                self.match(CellsParser.NEWLINE)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class PintypeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def inputpin(self):
            return self.getTypedRuleContext(CellsParser.InputpinContext,0)


        def outputpin(self):
            return self.getTypedRuleContext(CellsParser.OutputpinContext,0)


        def getRuleIndex(self):
            return CellsParser.RULE_pintype

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPintype" ):
                listener.enterPintype(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPintype" ):
                listener.exitPintype(self)




    def pintype(self):

        localctx = CellsParser.PintypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 32, self.RULE_pintype)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 167
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [CellsParser.T__13, CellsParser.T__16]:
                self.state = 165
                self.inputpin()
                pass
            elif token in [CellsParser.T__17, CellsParser.T__18]:
                self.state = 166
                self.outputpin()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class InputpinContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Identifier(self):
            return self.getToken(CellsParser.Identifier, 0)

        def AlphaNum(self):
            return self.getToken(CellsParser.AlphaNum, 0)

        def getRuleIndex(self):
            return CellsParser.RULE_inputpin

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInputpin" ):
                listener.enterInputpin(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInputpin" ):
                listener.exitInputpin(self)




    def inputpin(self):

        localctx = CellsParser.InputpinContext(self, self._ctx, self.state)
        self.enterRule(localctx, 34, self.RULE_inputpin)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 174
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [CellsParser.T__13]:
                self.state = 169
                self.match(CellsParser.T__13)
                self.state = 170
                self.match(CellsParser.T__14)
                self.state = 171
                _la = self._input.LA(1)
                if not(_la==CellsParser.AlphaNum or _la==CellsParser.Identifier):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 172
                self.match(CellsParser.T__15)
                pass
            elif token in [CellsParser.T__16]:
                self.state = 173
                self.match(CellsParser.T__16)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class OutputpinContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Identifier(self):
            return self.getToken(CellsParser.Identifier, 0)

        def AlphaNum(self):
            return self.getToken(CellsParser.AlphaNum, 0)

        def getRuleIndex(self):
            return CellsParser.RULE_outputpin

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOutputpin" ):
                listener.enterOutputpin(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOutputpin" ):
                listener.exitOutputpin(self)



